--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+// .text-red{
+//     color: rgb(23, 81, 205);
+// }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
